kubernetes_deploy/ruby-app/content-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: content-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: content-api
  template:
    metadata:
      labels:
        app: content-api
    spec:
      containers:
      - name: content-api
        image: quay.io/mfoster/vulnerable-demo-applications:content-api-0.1
        ports:
        - containerPort: 4567
