kubernetes_deploy/ruby-app/rails-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rails-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rails-app
  template:
    metadata:
      labels:
        app: rails-app
    spec:
      containers:
      - name: rails-app
        image: quay.io/mfoster/vulnerable-demo-applications:content-api-0.1
        ports:
        - containerPort: 3000
