kubernetes_deploy/ruby-app/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - name: worker
        image: quay.io/mfoster/vulnerable-demo-applications:worker-0.1
        ports:
        - containerPort: 4567
