kubernetes_deploy/ruby-app/content-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: content-api-service
  labels:
    app: content-api-service
spec:
  ports:
  - port: 4567
    name: http
    targetPort: 4567
  selector:
    app: content-api
