kubernetes_deploy/ruby-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multi-container-demo
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    external-dns.alpha.kubernetes.io/set-identifier: <ingress-name>-<namespace-name>-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
spec:
  ingressClassName: default
  tls:
  - hosts:
    - multi-container-demo.apps.live.cloud-platform.service.justice.gov.uk
  rules:
  - host: multi-container-demo.apps.live.cloud-platform.service.justice.gov.uk
    http:
      paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: rails-app-service
                port: 
                  number: 3000
